<resources>
    <string name="app_name">AppRestaran</string>
    <string name="boshlash">Boshlash</string>
    <string name="o_zinggizga_maqul_tilni_tanlang">O\'zinggizga maqul tilni tanlang</string>
    <string name="tizimga_kirish">Tizimga kirish</string>
    <string name="bosh_admin">Bosh admin</string>
    <string name="xodim">Xodim</string>
    <string name="tel_number">Tel number</string>
    <string name="parol">Parol</string>
    <string name="kirish">Kirish</string>
    <string name="ro_yxatdan_o_tish"><u>Ro\'yxatdan o`tish</u></string>
    <string name="login">Login</string>
    <string name="restoran_nomi">Restoran nomi</string>
    <string name="ismingizni_kiriting">Ismingizni kiriting</string>
    <string name="parolni_qayta_kirting">Parolni qayta kirting</string>
    <string name="men_offerta_shartlariga_roziman">Men offerta shartlariga roziman</string>
    <string name="title_activity_admin_main">AdminMainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="tarix">Tarix</string>
    <string name="bosh_sahifa">Bosh sahifa</string>
    <string name="tarif">Tarif</string>
    <string name="aloqa">Aloqa</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tarix_bo_lmi">Tarix bo\'lmi</string>
    <string name="password_hiden">*******</string>
    <string name="telefon_nomerni_to_liq_kiriting">Telefon nomerni to\'liq kiriting</string>
    <string name="parolni_kiriting">Parolni kiriting</string>
    <string name="ismingiz">Ismingiz</string>
    <string name="restaraningizni_nomini_kiriting">Restaraningizni nomini kiriting</string>
    <string name="restaraningiz_nomi">Restaraningiz nomi</string>
    <string name="offerta_shartlari_bilan_tanishib_chiqing">Offerta shartlari bilan tanishib chiqing!!</string>
    <string name="parolni_bir_xil_emas">Parolni bir xil emas</string>
    <string name="ro_yxatdan_o_tish_1">Ro\'yxatdan o\'tish</string>
    <string name="parolda_kamida_4_ta_belgi_bo_lsin">Parolda kamida 4 ta belgi bo\'lsin</string>
    <string name="pin_kodni_takrorlang">Pin kodni takrorlang</string>
    <string name="_4_xonali_pin_kod_yarating">4 xonali pin kod yarating</string>
    <string name="yangi_pin_kod_kiriting">Yangi pin kod kiriting</string>
    <string name="kiritilgan_ma_lumot_mos_kelmaydi">Kiritilgan ma\'lumot mos kelmaydi</string>
    <string name="telefon_raqamini_kiriting">Telefon raqamini kiriting</string>
    <string name="pin_kodni_kiriting">Pin kodni kiriting</string>
    <string name="chiqish_uchun_orqaga_tugmasini_bosing">Chiqish uchun «Orqaga» tugmasini bosing</string>
    <string name="xush_kelibsiz">Xush kelibsiz</string>
    <string name="xodimlar">Xodimlar</string>
    <string name="ombor">Ombor</string>
    <string name="ofitsantlar">Ofitsantlar</string>
    <string name="kassirlar">Kassirlar</string>
    <string name="stollar">Stollar</string>
    <string name="menejerlar">Menejerlar</string>
    <string name="omborchilar">Omborchilar</string>
    <string name="mahsulotlar">Mahsulotlar</string>
    <string name="hisobdan_chiqish">Hisobdan chiqish</string>
    <string name="sozlanmalar">Sozlanmalar</string>
    <string name="mahsulotlar_bo_limi">Mahsulotlar bo\'limi</string>
    <string name="bo_lim">Bo\'lim</string>
    <string name="nomi">Nomi</string>
    <string name="mahsulot_haqida">Mahsulot haqida</string>
    <string name="narxi">Narxi</string>
    <string name="oldingi_narxi">Oldingi narxi</string>
    <string name="_0_ta_qolgan">0 ta qolgan</string>
    <string name="_0_ta_qo_shilgan">0 ta qo\'shilgan</string>
    <string name="chegirma_0_0">Chegirma 0.0%</string>
    <string name="mahsulot_nomi">Mahsulot nomi</string>
    <string name="bo_lim_nomi">Bo\'lim nomi</string>
    <string name="saqlash">Saqlash</string>
    <string name="qo_shish">Qo\'shish</string>
    <string name="mahsulot_qo_shish">Mahsulot qo\'shish</string>
    <string name="ofitsantlar_bo_limi">Ofitsantlar bo\'limi</string>
    <string name="bo_lim_nomini_kiriting">Bo\'lim nomini kiriting</string>
    <string name="ismi">Ismi</string>
    <string name="bekor_qilish">Bekor qilish</string>
    <string name="oshpaz_qo_shish">Oshpaz qo\'shish</string>
    <string name="ofitsant_qo_shish">Ofitsant qo\'shish</string>
    <string name="kassir_qo_shish">Kassir qo\'shish</string>
    <string name="omborchi_qo_shish">Omborchi qo\'shish</string>
    <string name="menejer_qo_shish">Menejer qo\'shish</string>
    <string name="stollar_bo_limini_qo_shish">Stollar bo\'limini qo\'shish</string>
    <string name="omborchilar_bo_limi">Omborchilar bo\'limi</string>
    <string name="stollar_bo_limi">Stollar bo\'limi</string>
    <string name="menejerlar_bo_limi">Menejerlar bo\'limi</string>
    <string name="oshpazlar_bo_limi">Oshpazlar bo\'limi</string>
    <string name="kassirlar_bo_limi">Kassirlar bo\'limi</string>
    <string name="hajmi">Hajmi</string>
    <string name="xolati">Xolati</string>
</resources>