<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:id="@+id/menu1">
        <item
            android:id="@+id/navigation_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/bosh_sahifa" />
        <item
            android:id="@+id/navigation_worker"
            android:icon="@drawable/ic_worker"
            android:title="@string/xodim" />
        <item
            android:id="@+id/navigation_history"
            android:icon="@drawable/ic_history"
            android:title="@string/tarix" />
    </group>
    <group android:id="@+id/menu2">
        <item

            android:icon="@drawable/ic_product"
            android:title="@string/mahsulotlar" />
        <item

            android:icon="@drawable/ic_warehouse"
            android:title="@string/ombor" />
    </group>
    <group android:id="@+id/menu3">
        <item

            android:icon="@drawable/ic_calendar"
            android:title="@string/tarif" />
        <item

            android:icon="@drawable/ic_settings"
            android:title="@string/sozlanmalar" />
    </group>
    <item

        android:icon="@drawable/ic_log_out"
        android:title="@string/hisobdan_chiqish" />


</menu>