<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_liner_layout"
    android:orientation="vertical"
    android:paddingVertical="@dimen/_20sp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/kassir_qo_shish"
        android:textColor="@color/black"
        android:textSize="@dimen/txt_24sp" />

    <EditText

        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="@dimen/_40dp"
        android:layout_marginVertical="@dimen/_20sp"
        android:background="@drawable/bg_liner_layout"
        android:elevation="@dimen/radius_10dp"
        android:hint="@string/ismi"
        android:inputType="textCapSentences"
        android:paddingStart="@dimen/_16dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="@dimen/_40dp"
        android:background="@drawable/bg_liner_layout"
        android:elevation="@dimen/radius_10dp"
        android:hint="@string/parol"
        android:inputType="textCapSentences"
        android:paddingStart="@dimen/_16dp" />


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/_40dp"
        android:layout_height="wrap_content">

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="@dimen/_40dp"
            android:layout_marginBottom="@dimen/radius_10dp"
            android:text="@string/bekor_qilish"
            android:textAllCaps="false"
            android:textColor="#cc6659"
            android:textSize="@dimen/_18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/btn_kassir_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="@dimen/_40dp"
            android:layout_marginBottom="@dimen/radius_10dp"
            android:text="@string/saqlash"
            android:textAllCaps="false"
            android:textColor="#66a4d2"
            android:textSize="@dimen/_18sp"
            android:textStyle="bold" />
    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>