<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linearLayoutCompat3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/radius_10dp"
        android:layout_marginVertical="@dimen/padding_margin_20dp"
        android:background="@drawable/bg_liner_layout"
        android:elevation="@dimen/radius_10dp"
        android:orientation="vertical"
        android:paddingVertical="@dimen/padding_margin_30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:layout_marginStart="@dimen/_15dp"
            android:text="@string/mahsulot_nomi"
            android:textColor="#000000"

            />

        <EditText
            android:id="@+id/edt_departament_name"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginHorizontal="@dimen/_15dp"
            android:background="@drawable/bg_liner_layout"
            android:elevation="@dimen/radius_10dp"
            android:hint="@string/nomi"
            android:inputType="textCapSentences"
            android:paddingStart="@dimen/_16dp" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="10dp"
                    android:layout_marginStart="@dimen/_15dp"
                    android:text="@string/hajmi"
                    android:textColor="#000000"

                    />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginHorizontal="@dimen/_15dp"
                    android:layout_marginBottom="@dimen/padding_margin_30dp"
                    android:background="@drawable/bg_liner_layout"
                    android:elevation="@dimen/radius_10dp"
                    android:hint="@string/hajmi"
                    android:inputType="textCapSentences"
                    android:paddingStart="@dimen/_16dp" />
            </androidx.appcompat.widget.LinearLayoutCompat>


            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="10dp"
                    android:layout_marginStart="@dimen/_15dp"
                    android:text="@string/xolati"
                    android:textColor="#000000" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginHorizontal="@dimen/_15dp"
                    android:layout_marginBottom="@dimen/padding_margin_30dp"
                    android:background="@drawable/bg_liner_layout"
                    android:elevation="@dimen/radius_10dp"
                    android:inputType="textCapSentences"
                    android:paddingStart="@dimen/_16dp" />

            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            app:layout_constraintBottom_toBottomOf="parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_16dp"
                android:layout_weight="1"
                android:backgroundTint="#f24332"
                android:text="O'chirish"
                android:textColor="@color/black"
                android:textSize="12sp"
                app:cornerRadius="@dimen/radius_10dp" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="3" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_edite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_16dp"
                android:layout_weight="1"
                android:backgroundTint="@color/yellow"
                android:text="@string/saqlash"
                android:textColor="@color/black"
                android:textSize="12sp"
                app:cornerRadius="@dimen/radius_10dp" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.constraintlayout.widget.ConstraintLayout>